# fastapicorenew

./: Dockerfile  README.md  aerich.ini  celerybeat-schedule  commands.txt  docker-compose.yaml  main.py  mongocommands.txt  pyproject.toml  requirements.txt
env/: db.env  fastapi.env
media/chataudios/: 01610e1f-0de3-4746-b795-c634bb6d6549recording-919de18d-e65d-4d51-8754-4a466f3101b5.m4a  59ea2e30-cb26-4cb3-8ad3-5f6c6a5b461frecording-0985a950-9110-457c-9747-59e500d68b52.m4a  8821983a-18ec-44d5-8062-0acaef99f254recording-94202d51-758d-45f2-a0f1-28a467736100.m4a
media/chatimages/: 4a4fa369-ed27-407a-b061-e0ac6403eca0recording-beb0740a-708e-4bb1-a7f1-fe867e661054.m4a  5da603ed-a416-4c3b-aa74-dcb88ad60c36recording-73769be5-99fa-4910-a0d1-e81ec152fbc5.m4a  85c61a8f-8292-49b9-bf63-54ea19344777recording-851f2038-8a96-4d87-bbd4-16c3487a7684.m4a  bc60c141-070f-4a1b-b8a8-63d326773b7brecording-8509a3d3-5af4-40cd-a03a-edc9f76e1d40.m4a  c01f1267-8b00-45c5-bbdb-bae15c15f74arecording-7648bdf9-6f52-48be-bf16-dcd490f803a4.m4a
migrations/models/: 11_20211023074152_None.sql  12_20211023074214_update.sql  13_20211023105424_update.sql  14_20211023112917_update.sql  15_20211023115533_update.sql  16_20211023140637_update.sql  17_20211025070848_update.sql  18_20211025080304_update.sql  19_20211025101904_update.sql  20_20211111121648_update.sql  21_20211112101042_update.sql  22_20211112141326_update.sql  23_20211116060926_update.sql  24_20211116061553_update.sql  25_20211116061704_update.sql  26_20211116063509_update.sql  27_20211116071030_update.sql  28_20211116072028_update.sql  (+52 more)
(+51 files in other folders)
